--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,4 @@ services:
     working_dir: /app
     ports: 
       - 3000:4321
-    command: sh -c "cd /app && npm run dev"
-
+    command: sh -c "npm install && npm run dev"
