--- a/.pages.yml
+++ b/.pages.yml
@@ -1,1 +1,40 @@
 media: astro-app/public/images
+content: 
+  - name: posts
+    label: Blog Posts
+    path: astro-app/src/content/post
+    type: collection
+    fields:
+      - name: title
+        label: Title
+        type: string
+      - name: description
+        label: Description
+        type: string
+      - name: publishDate
+        label: Publish Date
+        type: date
+      - name: updatedDate
+        label: Updated Date
+        type: date
+      - name: tags
+        label: Tags
+        type: string
+        list: 
+          min: 1
+          max: 5
+          default: [news]
+      - name: coverImage
+        label: Cover Image
+        type: image
+        options:
+          extensions: [jpg, png]
+      - name: ogImage
+        label: Social Media Share image
+        type: image
+        options:
+          extensions: [jpg, png]
+      - name: draft
+        label: Draft
+        type: boolean
+        default: false
