Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -38,3 +38,6 @@ content:
         label: Draft
         type: boolean
         default: false
+      - name: body
+        label: Body
+        type: rich-text
