--- a/.pages.yml
+++ b/.pages.yml
@@ -56,4 +56,7 @@ content:
       - name: body
         label: Body
         type: rich-text
-media: astro-app/public/images
+media:
+      input: astro-app/public/images
+      output: src/assets/images
+
